--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ DEBUG=false
 # Disable streaming AI responses (set to "true" or "1" to disable edits/Thinking... and only send the final reply, for slow/unstable connections)
 DISABLE_STREAM=true
 
+# Streaming granularity (number of characters between updates, 0 = update on every character)
+STREAM_CHAR=50
+
 # Cache directory (default: ./cache)
 CACHE_DIR=./cache
 
