Add ability to not respond and update system prompt

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,7 @@ M_CFG_FOLDER=./model
 
 # Show welcome/online message on bot startup (true/false)
 WELCOME_MSG=true
+
+# Enable dynamic response behavior (true/false)
+# If true, the bot may choose not to respond to certain messages by outputting "///noresponse"
+DYNAMIC=true
