--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ CHANNELS=ChannelID
 DEBUG=false
 
 # Disable streaming AI responses (set to "true" or "1" to disable edits/Thinking... and only send the final reply, for slow/unstable connections)
-DISABLE_STREAM=true
+DISABLE_STREAM=false
 
 # Streaming granularity (number of characters between updates, 0 = update on every character)
 STREAM_CHAR=50
